@@ -1,3 +1,10 @@
+2021-08-17  Mikhail R. Gadelha  <mikhail@igalia.com>
+
+        Unreviewed. Skip failing MIPS tests
+        https://bugs.webkit.org/show_bug.cgi?id=229198
+
+        * ChakraCore.yaml:
+
 2021-08-13  Keith Miller  <keith_miller@apple.com>
 
         EnumeratorNextUpdatePropertyName always needs to be able to handle IndexedMode
